Kor translation - Buildings.json
Korean translation added

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -92,7 +92,7 @@
 		Czech:"Nesmí být na pláních."
 		German:"Darf nicht auf dem Flachland sein."
 		Ukrainian:"Не може бути на рівнинах"
-		Korean:"평지가 아니어야 합니다"
+		Korean:"평지에 건설 "
 }
 
 	"Stonehenge":{
