Kor translation - Diplomacy,Trade,Nations.json
Korean translation added

--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -178,7 +178,7 @@
 		Czech:"To zní dobře"
 		German:"Sehr gut"
                 Malay:"Bagus juga!"
-		Korean:""
+		Korean:"좋습니다."
 }
 
 	"Not this time.":{ // declining trade text
