Kor translation - Units,Promotions.json
Korean translation added

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1525,7 +1525,7 @@
 		Polish:"Obcy kraj"
 		Portuguese:"Terra estrangeira"
 		Ukrainian:"Ворожа територія"
-		Korean:"우호 영토 밖"
+		Korean:"우호적 영토 아님"
 	}
 
 	"Destroyer":{
