Complete polish translation for tutorial (Finally ^^) (#1410)
And some small fixes

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -836,7 +836,7 @@
 		Czech:"Nevložili jste příliš mnoho hráčů do moc malé mapy?"
 		Ukrainian:"Можливо забагато гравців на замаленьку мапу?"
 		German:"Vielleicht hast du zu viele SpielerInnen in eine zu kleine Karte gepackt?"
-		Polish:"Może dodałeś za dużo graczy na małej mapie?"
+		Polish:"Może dodałeś za dużo graczy na zbyt małej mapie?"
 		Portuguese:"Talvez você colocou muitos jogadores num mapa muito pequeno?"
 }
 
