--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -167,7 +167,7 @@
 		Italian:"+15% Produzione per le unità a distanza"
 		
 		Czech:"15% Produkce jednotek pro boj na dálku"
-		Polish:+15% Wzrostu produkcji jednostek walczących w dystansie"
+		Polish:"+15% Wzrostu produkcji jednostek walczących w dystansie"
 		Ukrainian:"Виробництво для далекобійних підрозділів +15%"
 		Korean:"이 도시에서 원거리 유닛 생산 시 생산력 + 15%"
 		Spanish:"+15% de producción para unidades a distancia"
